--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "GitHubTrending": "^3.1.3",
+    "prop-types": "^15.7.2",
     "react": "16.9.0",
     "react-native": "0.61.1",
     "react-native-easy-toast": "^1.2.0",
     "react-native-gesture-handler": "^1.4.1",
+    "react-native-htmlview": "^0.15.0",
     "react-native-reanimated": "^1.3.0",
     "react-native-vector-icons": "^6.6.0",
     "react-navigation": "^4.0.10",
